Fixed video size 3

--- a/bollockings/index.html
+++ b/bollockings/index.html
@@ -33,7 +33,7 @@
 			<link rel="stylesheet" href="css/index.css">
 
 		</head>
-		<body>
+		<body style="background-color: #000;">
 			<!-- Start Header Area -->
 			<header class="default-header">
 				<div class="container">
@@ -133,7 +133,7 @@
 							</p>
 						</div>
 					</div>
-					<iframe width="100" height="100" src="https://www.youtube.com/embed/kQtWVcFpvHg?controls=0" style="border: .10em solid white">
+					<iframe width="315" height="259" src="https://www.youtube.com/embed/kQtWVcFpvHg?controls=0" style="border: .10em solid white">
 					</iframe>
 					<p style="padding:1em; border-bottom: .10em solid white"> </p>
 					<br><br>
