--- a/bollockings/index.html
+++ b/bollockings/index.html
@@ -133,19 +133,19 @@
 							</p>
 						</div>
 					</div>
-					<iframe width="315" height="259" src="https://www.youtube.com/embed/kQtWVcFpvHg?controls=0" style="border: .10em solid white">
+					<iframe width="500" height="400" src="https://www.youtube.com/embed/kQtWVcFpvHg?controls=0" style="border: .10em solid white">
 					</iframe>
 					<p style="padding:1em; border-bottom: .10em solid white"> </p>
 					<br><br>
-					<iframe width="315" height="259" src="https://www.youtube.com/embed/zDH4wFv7DSk?controls=0" style="border: .10em solid white">
+					<iframe width="500" height="400" src="https://www.youtube.com/embed/zDH4wFv7DSk?controls=0" style="border: .10em solid white">
 					</iframe>
 					<p style="padding:1em; border-bottom: .10em solid white"> </p>
 					<br><br>
-					<iframe width="315" height="259" src="https://www.youtube.com/embed/nYDIMWpcKqI?controls=0" style="border: .10em solid white">
+					<iframe width="500" height="400" src="https://www.youtube.com/embed/ytvCS3n4AgE?controls=0" style="border: .10em solid white">
 					</iframe>
 					<p style="padding:1em; border-bottom: .10em solid white"> </p>
 					<br><br>
-					<iframe width="315" height="259" src="https://www.youtube.com/embed/7SN9le_U5SI?controls=0" style="border: .10em solid white">
+					<iframe width="500" height="400" src="https://www.youtube.com/embed/XVj45yN72uU?controls=0" style="border: .10em solid white">
 					</iframe>
 				</div>
 			</section>
